Adding dropdown content

--- a/wiki/pages/education.html
+++ b/wiki/pages/education.html
@@ -147,39 +147,81 @@ Our team members were able to visit several high schools across the states of Ka
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingOne">
       <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-        Accordion Item #1
+        <b>Government High School, Kopinayakkanpatti, Madurai, Tamil Nadu—</b>3rd July 2023 
       </button>
     </h2>
     <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+        <strong>Our team conducted an educational session at Government High School, Kopinayakkanpatti, Madurai, Tamil Nadu. During this session, we engaged with a group of twenty 9th-grade students. Our primary focus was educating them about the chemicals commonly found in everyday products, emphasizing their potential impact on health and the environment. This initiative aimed to raise awareness regarding harmful chemicals in pharmaceuticals and personal care products (PPCPs).<br>
+Given that many of the students came from agricultural backgrounds, we tailored our approach to introduce the concept of synthetic biology through the lens of high-yielding variety (HYV) crops. This approach allowed us to connect with the students and highlight the relevance of synthetic biology to their rural settings.<br>
+Considering the rural context of the school, our educational content was delivered bilingually, utilizing both Tamil and English. We collaborated closely with the school staff to ensure effective communication and engagement with the students. After our session, the students were very enthusiastic and even spoke about the possibility of a "banana man" and showed us a sketch.
+This initiative at Government High School, Kopinayakkanpatti, expanded our outreach and promoted awareness of synthetic biology and its real-world applications, particularly in regions with distinct linguistic and agricultural backgrounds.
       </div>
     </div>
   </div>
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingTwo">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-        Accordion Item #2
+        <b>Gundecha Education Academy, Mumbai, Maharashtra—</b>5th July 2023
       </button>
     </h2>
     <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+        <strong>Our team had the privilege of conducting an educational session for 30 high school students in Mumbai. During this visit, two team members engaged with students from the eleventh and twelfth grades, focusing on imparting fundamental concepts and practical applications of synthetic biology and genetic engineering.<br>
+To gauge the students' prior knowledge and establish a foundation for our presentation, we initiated the session by posing a series of essential questions. These questions included inquiries about the nature of a cell, the role of proteins, the concept of genes, the genetic inheritance of physical traits from parents, the functions of proteins in living organisms, the composition of the human body, and the presence of cells in all living things.<br>
+Based on the students' responses to these foundational questions, we tailored our presentation to address their specific level of understanding. We explained the relevant topics, delving into the intricate world of synthetic biology and genetic engineering. We mainly focused on introducing the students to potential synthetic biology and biotechnology career opportunities, sparking significant interest and generating numerous follow-up questions.<br>
+The students actively participated throughout the session, displaying remarkable enthusiasm, particularly during the interactive activity segment of the presentation. During this hands-on activity, they learned how to utilize a Codon Chart to decipher the amino acid sequence encoded by an mRNA sequence.
+
       </div>
     </div>
   </div>
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingThree">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-        Accordion Item #3
+        <b>Prakriya International School, Coimbatore, Tamil Nadu—</b>5th July 2023
+
       </button>
     </h2>
     <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+        <strong>Three members visited this school and had a fun, interactive session with 50 students from grades nine to twelve. Upon teaching synthetic biology and genetic engineering concepts, we explored biotechnology careers and conducted the codon chart activity. We also highlighted career prospects in biotechnology and presented our project, CarbanEl, and its real-world applications. The students actively participated, raising questions on biosafety, career opportunities, and the global impact of synthetic biology. We concluded the session with a codon chart activity, which the students enjoyed. Faculty members commended our educational efforts and posed intriguing questions about the containment of our project.
       </div>
     </div>
   </div>
+
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingThree">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+        <b>Stanes Anglo Indian Higher Secondary School, Coimbatore, Nadu—</b>5th July 2023
+      </button>
+    </h2>
+    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <strong>We visited Stanes Anglo Indian Higher Secondary School and conducted an interactive session with 50 higher secondary and middle school students on 5th July.<br>
+The students displayed great curiosity about synthetic biology after we introduced them to the basic concepts of replication, transcription, and translation. They were particularly intrigued by peptide formation and wondered if creating mermaids or bringing back extinct animals was possible!<br>
+One of the most fascinating questions we received was whether switching or changing a person's brain using genome information from other individuals was feasible. We thoroughly enjoyed answering such unique questions. The students' enthusiasm during the codon chart activity brought us immense joy and underscored the importance of education.<br>
+At the end of the session, after introducing our project and its applications, many individuals approached us with further questions about our project and inquiries on how they could become synthetic biologists. The students also provided feedback and expressed their gratitude for the session.
+      </div>
+    </div>
+  </div>
+
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingThree">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+        <b>DKS Hippocampus, Kanakapura Village (Outside Bangalore), Karnataka—</b>8th July 2023
+      </button>
+    </h2>
+    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <strong>This session took place at a school located on the outskirts of Bangalore, a setting that often needs more access to the abundant educational resources typically found in more urban schools.
+During our visit, two team members held a session for 60 students. Remarkably, these students, who were in their senior secondary years, demonstrated an impressive aptitude for grasping these complex concepts. Their ability to comprehend and articulate ideas typically reserved for collegiate-level students was remarkable.<br>
+What was even more inspiring was the students' proactive engagement with the material. They absorbed the knowledge shared and displayed a keen interest in the subject matter. One student went the extra mile by diligently taking notes during the session and sharing them with one of our team members through social media. This initiative demonstrated their commitment to learning and enthusiasm for discussing topics
+
+      </div>
+    </div>
+  </div>
+
+  
 </div>
 
 
