Adding highschool dropdowns

--- a/wiki/pages/education.html
+++ b/wiki/pages/education.html
@@ -152,10 +152,10 @@ Our team members were able to visit several high schools across the states of Ka
     </h2>
     <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>Our team conducted an educational session at Government High School, Kopinayakkanpatti, Madurai, Tamil Nadu. During this session, we engaged with a group of twenty 9th-grade students. Our primary focus was educating them about the chemicals commonly found in everyday products, emphasizing their potential impact on health and the environment. This initiative aimed to raise awareness regarding harmful chemicals in pharmaceuticals and personal care products (PPCPs).<br>
+        <p>Our team conducted an educational session at Government High School, Kopinayakkanpatti, Madurai, Tamil Nadu. During this session, we engaged with a group of twenty 9th-grade students. Our primary focus was educating them about the chemicals commonly found in everyday products, emphasizing their potential impact on health and the environment. This initiative aimed to raise awareness regarding harmful chemicals in pharmaceuticals and personal care products (PPCPs).<br>
 Given that many of the students came from agricultural backgrounds, we tailored our approach to introduce the concept of synthetic biology through the lens of high-yielding variety (HYV) crops. This approach allowed us to connect with the students and highlight the relevance of synthetic biology to their rural settings.<br>
 Considering the rural context of the school, our educational content was delivered bilingually, utilizing both Tamil and English. We collaborated closely with the school staff to ensure effective communication and engagement with the students. After our session, the students were very enthusiastic and even spoke about the possibility of a "banana man" and showed us a sketch.
-This initiative at Government High School, Kopinayakkanpatti, expanded our outreach and promoted awareness of synthetic biology and its real-world applications, particularly in regions with distinct linguistic and agricultural backgrounds.
+This initiative at Government High School, Kopinayakkanpatti, expanded our outreach and promoted awareness of synthetic biology and its real-world applications, particularly in regions with distinct linguistic and agricultural backgrounds.</p>
       </div>
     </div>
   </div>
@@ -167,10 +167,10 @@ This initiative at Government High School, Kopinayakkanpatti, expanded our outre
     </h2>
     <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>Our team had the privilege of conducting an educational session for 30 high school students in Mumbai. During this visit, two team members engaged with students from the eleventh and twelfth grades, focusing on imparting fundamental concepts and practical applications of synthetic biology and genetic engineering.<br>
+        <p>Our team had the privilege of conducting an educational session for 30 high school students in Mumbai. During this visit, two team members engaged with students from the eleventh and twelfth grades, focusing on imparting fundamental concepts and practical applications of synthetic biology and genetic engineering.<br>
 To gauge the students' prior knowledge and establish a foundation for our presentation, we initiated the session by posing a series of essential questions. These questions included inquiries about the nature of a cell, the role of proteins, the concept of genes, the genetic inheritance of physical traits from parents, the functions of proteins in living organisms, the composition of the human body, and the presence of cells in all living things.<br>
 Based on the students' responses to these foundational questions, we tailored our presentation to address their specific level of understanding. We explained the relevant topics, delving into the intricate world of synthetic biology and genetic engineering. We mainly focused on introducing the students to potential synthetic biology and biotechnology career opportunities, sparking significant interest and generating numerous follow-up questions.<br>
-The students actively participated throughout the session, displaying remarkable enthusiasm, particularly during the interactive activity segment of the presentation. During this hands-on activity, they learned how to utilize a Codon Chart to decipher the amino acid sequence encoded by an mRNA sequence.
+The students actively participated throughout the session, displaying remarkable enthusiasm, particularly during the interactive activity segment of the presentation. During this hands-on activity, they learned how to utilize a Codon Chart to decipher the amino acid sequence encoded by an mRNA sequence.</p>
 
       </div>
     </div>
@@ -184,42 +184,95 @@ The students actively participated throughout the session, displaying remarkable
     </h2>
     <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>Three members visited this school and had a fun, interactive session with 50 students from grades nine to twelve. Upon teaching synthetic biology and genetic engineering concepts, we explored biotechnology careers and conducted the codon chart activity. We also highlighted career prospects in biotechnology and presented our project, CarbanEl, and its real-world applications. The students actively participated, raising questions on biosafety, career opportunities, and the global impact of synthetic biology. We concluded the session with a codon chart activity, which the students enjoyed. Faculty members commended our educational efforts and posed intriguing questions about the containment of our project.
+        <p>Three members visited this school and had a fun, interactive session with 50 students from grades nine to twelve. Upon teaching synthetic biology and genetic engineering concepts, we explored biotechnology careers and conducted the codon chart activity. We also highlighted career prospects in biotechnology and presented our project, CarbanEl, and its real-world applications. The students actively participated, raising questions on biosafety, career opportunities, and the global impact of synthetic biology. We concluded the session with a codon chart activity, which the students enjoyed. Faculty members commended our educational efforts and posed intriguing questions about the containment of our project.</p>
       </div>
     </div>
   </div>
 
   <div class="accordion-item">
-    <h2 class="accordion-header" id="headingThree">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+    <h2 class="accordion-header" id="headingFour">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
         <b>Stanes Anglo Indian Higher Secondary School, Coimbatore, Nadu—</b>5th July 2023
       </button>
     </h2>
-    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+    <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>We visited Stanes Anglo Indian Higher Secondary School and conducted an interactive session with 50 higher secondary and middle school students on 5th July.<br>
+        <p>We visited Stanes Anglo Indian Higher Secondary School and conducted an interactive session with 50 higher secondary and middle school students on 5th July.<br>
 The students displayed great curiosity about synthetic biology after we introduced them to the basic concepts of replication, transcription, and translation. They were particularly intrigued by peptide formation and wondered if creating mermaids or bringing back extinct animals was possible!<br>
 One of the most fascinating questions we received was whether switching or changing a person's brain using genome information from other individuals was feasible. We thoroughly enjoyed answering such unique questions. The students' enthusiasm during the codon chart activity brought us immense joy and underscored the importance of education.<br>
-At the end of the session, after introducing our project and its applications, many individuals approached us with further questions about our project and inquiries on how they could become synthetic biologists. The students also provided feedback and expressed their gratitude for the session.
+At the end of the session, after introducing our project and its applications, many individuals approached us with further questions about our project and inquiries on how they could become synthetic biologists. The students also provided feedback and expressed their gratitude for the session.</p>
       </div>
     </div>
   </div>
 
   <div class="accordion-item">
-    <h2 class="accordion-header" id="headingThree">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+    <h2 class="accordion-header" id="headingFive">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
         <b>DKS Hippocampus, Kanakapura Village (Outside Bangalore), Karnataka—</b>8th July 2023
       </button>
     </h2>
-    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+    <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>This session took place at a school located on the outskirts of Bangalore, a setting that often needs more access to the abundant educational resources typically found in more urban schools.
+        <p>This session took place at a school located on the outskirts of Bangalore, a setting that often needs more access to the abundant educational resources typically found in more urban schools.
 During our visit, two team members held a session for 60 students. Remarkably, these students, who were in their senior secondary years, demonstrated an impressive aptitude for grasping these complex concepts. Their ability to comprehend and articulate ideas typically reserved for collegiate-level students was remarkable.<br>
-What was even more inspiring was the students' proactive engagement with the material. They absorbed the knowledge shared and displayed a keen interest in the subject matter. One student went the extra mile by diligently taking notes during the session and sharing them with one of our team members through social media. This initiative demonstrated their commitment to learning and enthusiasm for discussing topics
+What was even more inspiring was the students' proactive engagement with the material. They absorbed the knowledge shared and displayed a keen interest in the subject matter. One student went the extra mile by diligently taking notes during the session and sharing them with one of our team members through social media. This initiative demonstrated their commitment to learning and enthusiasm for discussing topics</p>
 
       </div>
     </div>
   </div>
+
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingSix">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+        <b>The Samhita Academy, Bangalore—</b>12th July 2023
+      </button>
+    </h2>
+    <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <p>We conducted an educational session for 50 students in grades 11 and 12, encompassing science and commerce backgrounds. During the session, we introduced them to fundamental concepts such as the central dogma of life, synthetic biology, and genetic engineering. Additionally, we provided insights into the iGEM competition and our project.
+The students showed keen interest in bioethics and biosafety, leading to engaging discussions. They enthusiastically inquired about potential career opportunities within synthetic biology and exhibited curiosity regarding the intricacies of biosafety and bioethics.</p>
+
+
+      </div>
+    </div>
+  </div>
+
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingSeven">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
+        <b>Board High School, Udupi—</b>9th September 2023
+      </button>
+    </h2>
+    <div id="collapseSeven" class="accordion-collapse collapse" aria-labelledby="headingSeven" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <p>Our team's visit to Board High School, a government school in Udupi, Karnataka, was a valuable experience. We interacted with 60 students from grades 8 and 9 despite initially planning a presentation designed for 11th and 12th graders. This presentation centered around synthetic biology and genetic engineering, had been well-received among older students in cities like Bangalore and Coimbatore.<br>
+One of the primary challenges we encountered at Board High School was the language barrier. While the school taught in both English and Kannada, the students primarily communicated in Kannada. To bridge this gap, we sought assistance from teachers and used numerous examples to make the content more accessible. We also explained amino acids using our music composition.
+Despite the language challenges, our visit proved to be fruitful. Some students showed genuine interest and asked questions about synthetic biology, indicating their curiosity and engagement with the topic. The highlight of our visit was the interactive activity we conducted. In this activity, students decoded an amino acid chain to reveal a secret message using a codon chart. This hands-on exercise was fun and highly engaging, showcasing the effectiveness of our teaching approach. Importantly, every student successfully decoded the message, demonstrating the effectiveness of our teaching methods.</p>
+
+      </div>
+    </div>
+  </div>
+
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingEight">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEight" aria-expanded="false" aria-controls="collapseEight">
+        <b>MJC school, Manipal, Karnataka—</b>14th September 2023
+      </button>
+    </h2>
+    <div id="collapseEight" class="accordion-collapse collapse" aria-labelledby="headingEight" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <p>Building on our experience from the visit to Board High School, we incorporated more hands-on and interactive learning activities. Our team's visit to MJC School in Manipal was an enriching experience, where we engaged with 75 students using a revamped presentation that catered to their needs and preferences.<br>
+The new presentation strategy began with an extensive explanation of the cell, providing a solid foundation for understanding subsequent topics. We then explained the concepts of DNA, RNA, and proteins before delving into the intriguing world of synthetic biology. Additionally, we elucidated our project and discussed the exciting prospects of a career in biotechnology, inspiring students to consider pursuing this field.<br>
+Recognizing the importance of effective communication, some team members provided Kannada translations and examples when students struggled to grasp certain concepts. This adaptable approach ensured that all students could follow the presentation comfortably.<br>
+Our visit concluded with another engaging activity in which students decoded an amino acid sequence to reveal a secret message using a codon chart. This exercise sparked curiosity and led to a lively discussion, during which students asked numerous questions and sought clarification on various conceptual aspects.<br>
+In conclusion, our educational visit to Board High School, followed by the visit to MJC School, helped us reflect and modify our teaching methods to cater to different populations of students in order to make synthetic biology more understandable.<br>
+      </p>
+
+      </div>
+    </div>
+  </div>
+
+
 
   
 </div>
