--- a/wiki/pages/education.html
+++ b/wiki/pages/education.html
@@ -272,10 +272,100 @@ In conclusion, our educational visit to Board High School, followed by the visit
     </div>
   </div>
 
-
-
-  
 </div>
+
+
+  <p class="mt-5 MAIN-STUFF">Reaching out to Middle School Students</p>
+  <p class="mt-5 sub-stuff">Teaching middle school students about environmental concepts was crucial as it promotes mutual learning. We tailored our content to align with the general school curriculum, focusing on chemicals, pollutants, and sustainability rather than biology. This approach encourages responsible, sustainable attitudes from an early age. <br>
+Our documentation can aid future educational initiatives and highlight broader environmental issues. Moreover, it encourages early engagement in environmental issues and lays a foundation for understanding its relevance to real-world challenges.</p>
+
+  <div class="accordion" id="accordionExample">
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingOne">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+        <b>Prakriya International School </b> (5 July, 2023)
+      </button>
+    </h2>
+    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <p>During the session with the middle school students, we focused on addressing the topic of general pollutants in the environment. Additionally, we provided a concise overview of our project. The students from the middle school displayed an extraordinary level of curiosity and enthusiasm.<br>
+Their inquiries ranged from the intriguing possibility of combining genes from animals and humans to exploring the notion of sweating hydrochloric acid through the skin. These thought-provoking questions underscored their eagerness to delve into the complexities of synthetic biology and genetic engineering. The session with the middle school students was marked by their inquisitiveness and their readiness to explore the boundaries of scientific possibilities.</p>
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingTwo">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+        <b> Increasing our impact: India Literacy Project</b>
+      </button>
+    </h2>
+    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <p>To take our education a step further, we have collaborated with India Literacy Project (ILP). This non-profit organization aims to enable children in government schools to acquire grade-appropriate skills and career opportunities. <br>
+We translated our middle school educational content on "Chemicals in Daily Use Products" into a regional language, Kannada, which will be integrated into their syllabus as additional content and be taught at almost <b>14,102 schools</b> across India. This gave us a chance to spread awareness about the presence of harmful chemicals in personal care products among the local community. </p><br>
+      </div>
+    </div>
+  </div>
+  </div>
+
+
+  <p class='mt-5 MAIN-STUFF'> Sparking young minds</p>
+  <p class='mt-5 sub-stuff'> Teaching primary school students about environmental concepts is essential as it promotes early curiosity. We engaged them by using an activity booklet and a comic strip. While we did not teach specific content, our creative approach sparks interest and encourages early engagement in science, fostering an understanding of its relevance to real-world challenges.</p>
+
+  <div class="accordion" id="accordionExample">
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingOne">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+        <b>Sri Krishna Mandir, Hulimavu, Bangalore—</b>8th July 2023
+      </button>
+    </h2>
+    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <p>Our team visited an underprivileged primary school to inspire students and cultivate their interest in science. Upon asking about their future aspirations, many students appeared uncertain or expressed a desire to become cricketers. We introduced the idea of pursuing careers as doctors or scientists while not discouraging their present ambitions, and then we explained our ongoing project, highlighting its fascinating aspects.</p>
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingTwo">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+        <b>Content created by us for primary school students</b>
+      </button>
+    </h2>
+    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingThree">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+        <b>Tricky triclocarban comic strip:</b>
+
+      </button>
+    </h2>
+    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <p>Our unique and personalized comic strip titled “Tricky Triclocarban” came out in two parts, wherein the first part explained the effects of TCC on the environment. In contrast, the second part focused on how synthetic biology could solve this problem effectively. By using attractive graphical illustrations and simplifying scientific terms, we aimed to use this comic strip as a means to educate primary school students about synthetic biology in general and our project idea; this turned out to be a massive success as they stood awestruck looking at the comic and trying to get an understanding of the same while we explained it to them bit by bit!</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingFour">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+        <b>Activity booklet</b>
+      </button>
+    </h2>
+    <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <p>GMOs are frequently faced with mistrust, so to demystify and explain the science behind it in the most approachable way possible, we set out to create an activity booklet for children.</p><br>
+      </div>
+    </div>
+  </div>
+  </div>
+
+
 
 
                   </div>
